# i2c-proxy-demo

./: Cargo.toml
.cargo/: config
src/: i2cdetect.rs  main.rs  proxy.rs
