[package]
name = "i2c-demo"
version = "0.1.0"
authors = ["Rahix <hws@denx.de>"]

[dependencies]
cortex-m = "0.5.2"
cortex-m-rt = "0.5.1"
panic-abort = "0.2.0"
embedded-hal = "0.2.1"
lsm303dlhc = "0.2.0"

[dependencies.f3]
features = ["rt"]
version = "0.6.1"

[profile.release]
codegen-units = 1 # better optimizations
debug = true
lto = true # better optimizations
